[package]
name = "search_corpus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgi = "0.6"
json = "0.12"
url = "2.1"

[dependencies.regex]
version = "1"
default-features = false  # Turn off unicode support
features = ["std", "perf", "unicode-perl"]

[profile.release]
opt-level = 2 #3 is max
#debug = true
# https://deterministic.space/high-performance-rust.html
#lto = "fat"
#codegen-units = 1