[package]
name = "search_corpus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgi = "0.6"
json = "0.12"
url = "2.1"
fst = "0.4"
regex-automata = { version = "0.1.9", features = ["transducer"] }
memmap = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "search_corpus"
path = "src/main.rs"

[[bin]]
name = "search_combinations"
path = "src/search_combinations.rs"

[[bench]]
name = "variedwords"
harness = false

[dependencies.regex]
version = "1"
default-features = false  # Turn off unicode support
features = ["std", "perf", "unicode-perl"]

[profile.release]
opt-level = 2 #3 is max
#debug = true
# https://deterministic.space/high-performance-rust.html
#lto = "fat"
#codegen-units = 1

